--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
+    "db:seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
     "prisma": "^5.5.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
